@@ -1,3 +1,6 @@
+5 March 2012: Wouter
+	- distinguish 2xx, 3xx and other (404) http rcodes.
+
 2 March 2012: Wouter
 	- http check is performed, nonblocking.  Lookup of addres(es), A, AAAA
 	  to the (up to 5) DHCP DNS resolvers.  3 urls are checked, until one
